--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   easy_localization: ^3.0.0
   # Splash screen.
   flutter_native_splash: ^2.4.4
+  # An SVG rendering and widget library for Flutter, which allows painting and displaying Scalable Vector Graphics.
+  flutter_svg: ^2.1.0
+  # A flutter plugin for adapting screen and font size.Guaranteed to look good on different models.
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
