--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -4,3 +4,5 @@ flutter_native_splash:
   image: assets/images/Splash Screen.png
   # Following are specific parameters for Android 12+.
   android_12:
+    color: "#ffffff"
+    image: assets/images/splash_android12_logo.png
