--- a/.github/workflows/android_fastlane_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_app_distribution_workflow.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-          distribustion: 'temurin'
+          distribution: 'temurin'
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
