--- a/.github/workflows/android_fastlane_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_app_distribution_workflow.yaml
@@ -29,6 +29,10 @@ jobs:
           bundler-cache: true
           working-directory: android
 
+      - name: Install dependencies
+        run: bundle install
+        working-directory: android
+
       - name: Run Fastlane App Distribution
         env:
           FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
