--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.2+1
 
 environment:
-  sdk: ^3.6.0-334.4.beta
+  sdk: ^3.7.0-0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -52,8 +52,10 @@ dependencies:
   retrofit_generator: ^9.2.0
   pretty_dio_logger: ^1.4.0
   # Localization.
+  flutter_localizations:
+    sdk: flutter
   intl: ^0.19.0
-  easy_localization: ^3.0.0
+  easy_localization: ^3.0.7+1
   # Splash screen.
   flutter_native_splash: ^2.4.4
   # An SVG rendering and widget library for Flutter, which allows painting and displaying Scalable Vector Graphics.
