--- a/.github/workflows/android_fastlane_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_app_distribution_workflow.yaml
@@ -12,13 +12,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up JDK
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.29.3'
           channel: 'stable'
 
       - name: Install Ruby
@@ -39,5 +43,6 @@ jobs:
         env:
           FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
         run: |
+          set -ex
           bundle exec fastlane android firebase_distribution
         working-directory: android
