--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   # A flutter plugin for adapting screen and font size.Guaranteed to look good on different models.
   flutter_screenutil: ^5.9.3
   firebase_core: ^3.13.1
+  # Flutter library to load and cache network images. Can also be used with placeholder and error widgets.
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
