--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   shared_preferences: ^2.5.3
   # Flutter Secure Storage provides API to store data in secure storage. Keychain is used in iOS, KeyStore based solution is used in Android.
   flutter_secure_storage: ^9.2.4
+  # A package provides an easy way to add shimmer effect in Flutter project.
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
